# protohackers

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: 0_smoke_test.cpp  common.cpp  common.hpp
